--- a/src/client/css/custom/notifications.scss
+++ b/src/client/css/custom/notifications.scss
@@ -1,4 +1,3 @@
-
 .notification-drawer {
   position: absolute;
   width: 350px;
@@ -10,10 +9,12 @@
   .notification {
     background: white !important;
     padding: 10px 5px;
-    box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0px 0 1px rgb(10 10 10 / 2%);
+    box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%),
+      0 0px 0 1px rgb(10 10 10 / 2%);
   }
 
-  .level, .level-item {
+  .level,
+  .level-item {
     margin: 0 !important;
   }
 
@@ -109,47 +110,38 @@
     flex: 1 1 auto;
     padding: 0px;
 
-      .item-1 {
-        display: flex;
-        align-items: center;
-        font-weight: 700;
-        font-size: 14px;
+    .item-1 {
+      display: flex;
+      align-items: center;
+      font-weight: 700;
+      font-size: 14px;
 
-        .icon {
-          width: 11px;
-          height: 11px;
-          margin-right: 4px;
-        }
+      .icon {
+        width: 11px;
+        height: 11px;
+        margin-right: 4px;
       }
+    }
 
-      .item-2 {
-        font-weight: 400;
-        font-size: 12px
-      }
+    .item-2 {
+      font-weight: 400;
+      font-size: 12px;
+    }
   }
 
   &.success {
-    span {
-      color: #4a4a4a;
-    }
     .icon {
       color: $success;
     }
   }
 
   &.pending {
-    span {
-      color: #FBC44D;
-    }
     .button::after {
       border-color: transparent transparent $info $info !important;
     }
   }
 
   &.failed {
-    span {
-      color: #938F95;
-    }
     .icon {
       color: $danger;
     }
@@ -159,6 +151,11 @@
     color: #8899a7;
     font-size: 12px;
     font-weight: 100;
+
+    .bridge-selected {
+      font-style: italic;
+      text-transform: capitalize;
+    }
   }
 
   .tx-content {
